update to start page bullets

--- a/app/views/start.html
+++ b/app/views/start.html
@@ -32,7 +32,9 @@
       <p>To use this service you will need to have:</p>
       <ul class="list list-bullet">
         <li>the claimant in front of you</li>
+        </ul>
         <p>or</p>
+        <ul class="list list-bullet">
         <li>the claimant on the phone</li>
       </ul>
       
